Fix overflow of big laptops

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -70,6 +70,10 @@ a {
   padding-right: 1rem;
 }
 
+.wrapped {
+  overflow: hidden;
+}
+
 .wrap {
   margin: auto;
   max-width: 71.25rem;
